--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,4 +32,4 @@ jobs:
           aws-region: us-east-1
 
       - name: Copy to S3
-        run: aws s3 sync ./build. s3://server-practice --delete
+        run: aws s3 sync ./build s3://server-practice --delete
